--- a/package.json
+++ b/package.json
@@ -24,10 +24,12 @@
     "es6-shim": "0.35.1",
     "reflect-metadata": "0.1.3",
     "rxjs": "5.0.0-beta.6",
+    "socket.io-client": "^1.4.8",
     "systemjs": "0.19.26",
     "zone.js": "0.6.12"
   },
   "devDependencies": {
+    "@types/socket.io-client": "^1.4.26",
     "angular-cli": "1.0.0-beta.10",
     "codelyzer": "0.0.20",
     "ember-cli-inject-live-reload": "1.4.0",
@@ -40,6 +42,6 @@
     "ts-node": "0.5.5",
     "tslint": "3.11.0",
     "typescript": "1.8.10",
-    "typings": "1.3.1"
+    "typings": "1.3.2"
   }
 }
