--- a/package.json
+++ b/package.json
@@ -13,24 +13,32 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/common": "2.0.0-rc.4",
-    "@angular/compiler": "2.0.0-rc.4",
-    "@angular/core": "2.0.0-rc.4",
-    "@angular/forms": "0.2.0",
-    "@angular/http": "2.0.0-rc.4",
-    "@angular/platform-browser": "2.0.0-rc.4",
-    "@angular/platform-browser-dynamic": "2.0.0-rc.4",
-    "@angular/router": "3.0.0-beta.2",
+    "@angular/common": "2.0.0-rc.5",
+    "@angular/compiler": "2.0.0-rc.5",
+    "@angular/core": "2.0.0-rc.5",
+    "@angular/forms": "~0.3.0",
+    "@angular/http": "2.0.0-rc.5",
+    "@angular/platform-browser": "^2.0.0-rc.5",
+    "@angular/platform-browser-dynamic": "^2.0.0-rc.5",
+    "@angular/router": "v3.0.0-rc.1",
+    "@angular2-material/button": "^2.0.0-alpha.7-2",
+    "@angular2-material/card": "^2.0.0-alpha.7-2",
+    "@angular2-material/checkbox": "^2.0.0-alpha.7-2",
+    "@angular2-material/core": "^2.0.0-alpha.7-2",
+    "@angular2-material/icon": "^2.0.0-alpha.7-2",
+    "@angular2-material/list": "^2.0.0-alpha.7-2",
+    "@angular2-material/sidenav": "^2.0.0-alpha.7-2",
+    "@angular2-material/toolbar": "^2.0.0-alpha.7-2",
     "es6-shim": "0.35.1",
     "reflect-metadata": "0.1.3",
     "rxjs": "5.0.0-beta.6",
     "socket.io-client": "^1.4.8",
-    "systemjs": "0.19.26",
+    "systemjs": "0.19.31",
     "zone.js": "0.6.12"
   },
   "devDependencies": {
     "@types/socket.io-client": "^1.4.26",
-    "angular-cli": "1.0.0-beta.10",
+    "angular-cli": "^1.0.0-beta.10",
     "codelyzer": "0.0.20",
     "ember-cli-inject-live-reload": "1.4.0",
     "jasmine-core": "2.4.1",
@@ -41,7 +49,7 @@
     "protractor": "3.3.0",
     "ts-node": "0.5.5",
     "tslint": "3.11.0",
-    "typescript": "1.8.10",
+    "typescript": "^2.0.0",
     "typings": "1.3.2"
   }
 }
