--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "@angular2-material/list": "^2.0.0-alpha.7-2",
     "@angular2-material/sidenav": "^2.0.0-alpha.7-2",
     "@angular2-material/toolbar": "^2.0.0-alpha.7-2",
-    "angular2-google-maps": "^0.12.0",
+    "angular2-data-table": "^0.2.5",
+    "angular2-google-maps": "^0.13.0",
     "angular2-moment": "^0.8.2",
     "es6-shim": "0.35.1",
     "reflect-metadata": "0.1.3",
