--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "@angular2-material/toolbar": "^2.0.0-alpha.7-2",
     "angular2-data-table": "^0.2.5",
     "angular2-google-maps": "^0.13.0",
-    "angular2-moment": "^0.8.2",
+    "angular2-moment": "^1.0.0-beta.1",
     "es6-shim": "0.35.1",
     "reflect-metadata": "0.1.3",
     "rxjs": "5.0.0-beta.6",
