--- a/package.json
+++ b/package.json
@@ -21,14 +21,10 @@
     "@angular/platform-browser": "^2.0.0-rc.5",
     "@angular/platform-browser-dynamic": "^2.0.0-rc.5",
     "@angular/router": "v3.0.0-rc.1",
-    "@angular2-material/button": "^2.0.0-alpha.7-2",
-    "@angular2-material/card": "^2.0.0-alpha.7-2",
-    "@angular2-material/checkbox": "^2.0.0-alpha.7-2",
-    "@angular2-material/core": "^2.0.0-alpha.7-2",
-    "@angular2-material/icon": "^2.0.0-alpha.7-2",
-    "@angular2-material/list": "^2.0.0-alpha.7-2",
-    "@angular2-material/sidenav": "^2.0.0-alpha.7-2",
-    "@angular2-material/toolbar": "^2.0.0-alpha.7-2",
+    "@angular2-material/button": "^2.0.0-alpha.7-4",
+    "@angular2-material/core": "^2.0.0-alpha.7-4",
+    "@angular2-material/icon": "^2.0.0-alpha.7-4",
+    "@angular2-material/tabs": "^2.0.0-alpha.7-4",
     "angular2-data-table": "^0.2.5",
     "angular2-google-maps": "^0.13.0",
     "angular2-moment": "^1.0.0-beta.1",
