--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,9 @@ node_js:
   - "6"
 before_install:
   - "npm install -g angular-cli"
+  - "npm install -g typings"
 install:
   - "npm install"
+  - "typings install"
   - "ng build"
   - "ng github-pages:deploy"
