--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
   },
   "devDependencies": {
     "@types/socket.io-client": "^1.4.26",
-    "angular-cli": "^1.0.0-beta.10",
+    "angular-cli": "^1.0.0-beta.11-webpack.8",
     "codelyzer": "0.0.28",
     "ember-cli-inject-live-reload": "1.4.1",
     "jasmine-core": "2.4.1",
