--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,13 @@ sudo: required
 node_js:
   - "6"
 before_install:
+  - export CHROME_BIN=/usr/bin/google-chrome
+  - export DISPLAY=:99.0
+  - sh -e /etc/init.d/xvfb start
+  - sudo apt-get update
+  - sudo apt-get install -y libappindicator1 fonts-liberation
+  - wget https://dl.google.com/linux/direct/google-chrome-stable_current_amd64.deb
+  - sudo dpkg -i google-chrome*.deb
   - "npm install -g angular-cli@1.0.0-beta.11-webpack.8"
   - "npm install -g typings"
 install:
